[project]
name = "cache-app"
version = "0.1.0"
description = ""
authors = [
    {name = "MyBad1231",email = "genag4448@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aioredis (==2.0.1)",
    "annotated-types (==0.7.0)",
    "anyio (==4.8.0)",
    "async-timeout (==5.0.1)",
    "certifi (==2025.1.31)",
    "click (==8.1.8)",
    "exceptiongroup (==1.2.2)",
    "fastapi (==0.115.11)",
    "flake8 (==7.1.2)",
    "h11 (==0.14.0)",
    "httpcore (==1.0.7)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "iniconfig (==2.0.0)",
    "mccabe (==0.7.0)",
    "packaging (==24.2)",
    "pluggy (==1.5.0)",
    "pycodestyle (==2.12.1)",
    "pydantic (==2.10.6)",
    "pydantic-settings (==2.8.1)",
    "pydantic-core (==2.27.2)",
    "pyflakes (==3.2.0)",
    "pytest (==8.3.5)",
    "pytest-asyncio (==0.25.3)",
    "pytest-env (==1.1.5)",
    "python-dotenv (==1.0.1)",
    "sniffio (==1.3.1)",
    "starlette (==0.46.1)",
    "tomli (==2.2.1)",
    "typing-extensions (==4.12.2)",
    "uvicorn (==0.34.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
